2002-01-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/objbase.h (CoGetObject): Add prototype.

2002-01-14  Timothy J. Wood  <tjw@omnigroup.com>

	* include/winuser.h (ENUM_CURRENT_SETTINGS,
	ENUM_REGISTRY_SETTINGS): Add defines.

2002-01-14  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (FILE_ATTRIBUTE_ENCRYPTED): Correct constant.
	(FILE_ATTRIBUTE_DEVICE): Add define.


2002-01-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* ChangeLog: correct date in last entry. 

2002-01-11  Timothy J. Wood  <tjw@omnigroup.com>

	* include/winuser.h (MONITORENUMPROC): Add typedef.
	(EnumDisplayMonitors): Add prototype.
	* lib/user32.def (EnumDisplayMonitors): Add stub.
	
2002-01-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/vfw32.def (LIBRARY): Change to MSVFW32.DLL.

2002-01-04  TAMURA Kent  <tkent@users.sourceforge.net>

	* include/wingdi.h (BI_JPEG, BI_PNG, GGO_BEZIER,GGO_UNHINTED,
	 LAYOUT_RTL, LAYOUT_BITMAPORIENTATIONPRESERVED): Add defines.
	* include/winuser.h (HWND_MESSAGE, WS_EX_COMPOSITED,
	WS_EX_LAYERED, WS_EX_LAYOUTRTL, WS_EX_NOACTIVATE,
	WS_EX_NOINHERITLAYOUT): Add defines.
	* include/winnt.h (PF_RDTSC_INSTRUCTION_AVAILABLE,
	PF_PAE_ENABLED, MEM_PHYSICAL, MEM_RESET, MEM_TOP_DOWN,
	MEM_WRITE_WATCH): Add defines.


2002-01-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (InitializeCriticalSectionAndSpinCount):
	Add prototype.
	(SetCriticalSectionSpinCount): Likewise.

2001-12-15  Andrew Begel  <abegel@eecs.berkeley.edu>

	*include/winbase.h (CreateHardLink): Correct typo in UNICODE
	mappings.

2001-12-11  Phillip Susi  <psusi@cfl.rr.com>

	* include/commctrl.h (ACS_*): Add new defines.
	(PGS_*): Ditto.
	(CBES_*): Ditto.
	(TBSTYLE_*): Ditto.
	(TB_*): Ditto.
	(TTS_*): Ditto.
	(UDS_HOTTRACK): Add define.
	(SBT_TOOLTIPS): Ditto.
	(TBS_*): Add new defines.
	(HDS_*): Ditto.
	(LVS_EX_*) Ditto.
	(LVKF_*): Ditto.
	(TCM_GETEXTENDEDSTYLE): Add define.
	(TVS_NOHSCROLL): Ditto.