@@ -241,6 +241,8 @@ extern "C" {
 #define PFD_NEED_SYSTEM_PALETTE	0x00000100
 #define PFD_SWAP_EXCHANGE	0x00000200
 #define PFD_SWAP_COPY	0x00000400
+#define PFD_GENERIC_ACCELERATED	0x00001000
+#define PFD_DEPTH_DONTCARE	0x20000000
 #define PFD_DOUBLEBUFFER_DONTCARE	0x40000000
 #define PFD_STEREO_DONTCARE	0x80000000
 #define SP_ERROR	(-1)
