@@ -1077,6 +1077,7 @@ extern "C" {
 #define SPI_SETPOWEROFFTIMEOUT 82
 #define SPI_SETSCREENREADER 71
 #define SPI_SETSCREENSAVEACTIVE 17
+#define SPI_SETSCREENSAVERRUNNING 97
 #define SPI_SETSCREENSAVETIMEOUT 15
 #define SPI_SETSERIALKEYS 63
 #define SPI_SETSHOWSOUNDS 57
@@ -1871,6 +1872,8 @@ extern "C" {
 #define MOD_ON_KEYUP  2048
 #define MOD_RIGHT 16384
 #define MOD_LEFT 32768
+#define LLKHF_ALTDOWN  0x00000020
+
 #ifndef RC_INVOKED
 typedef BOOL(CALLBACK *DLGPROC)(HWND,UINT,WPARAM,LPARAM);
 typedef VOID(CALLBACK *TIMERPROC)(HWND,UINT,UINT,DWORD);
@@ -2551,6 +2554,14 @@ typedef struct tagMONITORINFO {
 	RECT rcWork;
 	DWORD dwFlags;
 } MONITORINFO,*LPMONITORINFO;
+typedef struct tagKBDLLHOOKSTRUCT {
+	DWORD vkCode;
+	DWORD scanCode;
+	DWORD flags;
+	DWORD time;
+	DWORD dwExtraInfo;
+} KBDLLHOOKSTRUCT, FAR *LPKBDLLHOOKSTRUCT, *PKBDLLHOOKSTRUCT;
+
 
 #define AnsiToOem CharToOemA
 #define OemToAnsi OemToCharA
