@@ -1,3 +1,12 @@
+2002-01-17  Marcus Geelnard  <marcus.geelnard@home.se>
+
+	* include/winsuser.h (tagKBDLLHOOKSTRUCT): Define struct
+	and typedefs.
+	(SPI_SETSCREENSAVERRUNNING): Add define.
+	(LLKHF_ALTDOWN): Add define.
+	* include/wingdi.h (PFD_GENERIC_ACCELERATED,
+	PFD_DEPTH_DONTCARE): Add defines.
+
 2002-01-17  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/objbase.h (CoGetObject): Add prototype.
